# ai_university

./: .env.example  .gitignore
ai-engine/: pyproject.toml
ai-engine/app/: config.py  deps.py  log.py  main.py  model_router.py  mq_consumer.py  schemas.py
ai-engine/app/aigc/: __init__.py  watermark.py
ai-engine/app/creation/: __init__.py  image_generator.py
ai-engine/app/memory/: __init__.py  summarizer.py
ai-engine/app/moderation/: __init__.py  moderator.py
ai-engine/app/orchestrator/: __init__.py  evaluator.py  generator.py
ai-engine/app/persona/: __init__.py  prompt_builder.py
ai-engine/app/router/: __init__.py  aigc.py  chat.py  creation.py  memory.py  models.py  moderation.py  persona.py  safety.py
ai-engine/app/safety/: __init__.py  quick_check.py
ai-engine/prompts/: .gitkeep  evaluate_prompt.j2  image_gen_prompt.j2  memory_summarize.j2  moderation_prompt.j2  system_agents.yaml  system_prompt.j2
ai-engine/tests/: __init__.py  conftest.py  test_creation.py  test_evaluator.py  test_generator.py  test_memory.py  test_model_router.py  test_moderation.py  test_persona.py  test_safety.py  test_watermark.py
app/: README.md  analysis_options.yaml  pubspec.yaml
context_memory/: coding_conventions.md  insights.md  project_decisions.md  session_checkpoints.md  work_log.md
docs/: @newcryptospace  weweweai  thewewe 项目完整资料汇总文档.md  AI元宇宙社交平台_可行性调研与落地方案.docx  AI元宇宙社交平台_可行性调研与落地方案.md  AI元宇宙社交平台_可行性调研与落地方案_汇报版.docx  AI元宇宙社交平台_可行性调研与落地方案_汇报版_v2.docx  AI元宇宙社交平台_可行性调研与落地方案_汇报版_v3.docx  AI元宇宙社交平台_可行性调研与落地方案_汇报版_v4.docx  AI元宇宙社交平台_方案H5.html  NotebookLM_调研与集成方案.md  Phase1_MVP_审阅意见.md  Phase1_MVP_需求文档.md  (+13 more)
server/: alembic.ini  pyproject.toml
server/app/: main.py
server/app/api/: __init__.py  auth.py  rooms.py  users.py
server/app/core/: __init__.py  config.py  database.py  deps.py  redis.py  security.py
server/app/gateway/: __init__.py
server/app/models/: __init__.py  admin.py  agent.py  ai_gateway.py  auxiliary.py  base.py  creation.py  external.py  message.py  metrics.py  moderation.py  notification.py  point.py  risk.py  room.py  user.py
server/app/services/: __init__.py  auth_service.py  room_service.py  user_service.py
server/app/ws/: __init__.py
server/migrations/: env.py
server/tests/: conftest.py  test_auth.py  test_rooms.py  test_users.py
shared/: __init__.py  constants.py  exceptions.py  pyproject.toml  schemas.py
(+79 files in other folders)
