[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherverse-server"
version = "0.1.0"
description = "AetherVerse 后端核心服务 (Agent A)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "redis>=5.0",
    "aio-pika>=9.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "sqladmin>=0.16",
    "aetherverse-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "faker>=24.0",
    "testcontainers[postgres]>=4.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]
