[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aetherverse-shared"
version = "0.1.0"
description = "AetherVerse 共享类型定义、枚举、异常、工具"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["shared*"]
